k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heidi-next-site
  namespace: hv-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heidi-next-site
  template:
    metadata:
      labels:
        app: heidi-next-site
    spec:
      imagePullSecrets:
        - name: repoflow-creds
      containers:
        - name: app
          image: api.repoflow.io/benguizat-5295/hv/heidi-next-site:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: app-data
              mountPath: /data
            - name: app-uploads
              mountPath: /app/public/uploads
      volumes:
        - name: app-data
          hostPath:
            path: /var/snap/microk8s/common/heidi/data
            type: DirectoryOrCreate
        - name: app-uploads
          hostPath:
            path: /var/snap/microk8s/common/heidi/uploads
            type: DirectoryOrCreate
