k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heidi-next-site
  namespace: hv-portfolio
spec:
  selector:
    app: heidi-next-site
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
