k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heidi-next-site
  namespace: hv-portfolio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public
  tls:
    - hosts:
        - heidivestin.com
      secretName: heidivestin-com-tls
  rules:
    - host: heidivestin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heidi-next-site
                port:
                  number: 80
